# tali-platform

./: .gitignore  .linear-smoke-test-taa6  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CURSOR_IMPLEMENTATION_SPEC.md  MVP_PLAN.md  NORTH_STAR.md  PRE_PILOT_ROLLOUT.md  PRODUCT_PLAN.md  RALPH_TASK.md  README.md  RELEASE_NOTES.md  docker-compose.yml  e2b.Dockerfile  vercel.json
.claude/: README.md  settings.json
.github/: CODEOWNERS
.ralph/: progress.md  tasks.mtime  tasks.yaml
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  alembic.ini  nixpacks.toml  pytest.ini  railway.json  railway.worker.json  requirements-dev.txt  requirements-lock.txt  requirements-runtime-lock.txt  requirements.txt  ruff.toml  seed_task.py
brand-assets/: README.md
docs/: AGENT_CONTROL_MODEL.md  AGENT_SETTINGS_UX_REVIEW_2026-07-17.md  AI_NATIVE_BEST_PRACTICES.md  AI_NATIVE_PRACTICES_ASSESSMENT_INTEGRATION.md  AI_ROUTING_EXECUTION_PLAN.md  API.md  ASSESSMENT_AI_NATIVE_IMPL_PLAN.md  ASSESSMENT_AI_NATIVE_REVIEW.md  ASSESSMENT_E2E_DEEP_DIVE.md  BULLHORN_BUILD_PLAN.md  BULLHORN_CLIENT_ONBOARDING.md  BULLHORN_INTEGRATION_PLAN.md  BULLHORN_LIVE_VALIDATION_RUNBOOK.md  ENV_SETUP.md  (+50 more)
platform-qa/: README.md  conftest.py  docker-compose.qa.yml  pyproject.toml  pytest.ini
platform-qa/.github/workflows/: contract-gate.yml
platform-qa/contracts/mainspring/: pipeline.json
platform-qa/examples/: brand_taali.py  substrate_mainspring.py
platform-qa/harness/: contract.py
platform-qa/tests/contract/: test_substrate_brand_contract.py
platform-qa/tests/e2e/: test_assembled_platform_smoke.py
(+3486 files in other folders)
