[project]
name = "platform-qa"
version = "0.1.0"
description = "Tier 2 cross-repo QA: substrate↔brand contract tests + assembled-platform E2E"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
